# rustmess

./: Cargo.toml  README.md
assets/: dodecahedron.json  hexahedron.json  icosahedron.blend  icosahedron.json  octahedron.json  tetrahedron.json  trapezohedron.json  vertex_shader.glsl
objects/: dice_scene.blend  dodecahedron.blend  hexahedron.blend  octahedron.blend  tetrahedron.blend  trapezohedron.blend
src/: actor.rs  album.rs  body.rs  etc.rs  gfx.rs  graphics.rs  main.rs  model.rs
