[package]
name = "tstp"
version = "0.1.0"
authors = ["Caeman Swartz <caemanswartz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.26"
obj-rs = { version = "0.6", features = ["glium"] }
cgmath = "*"
image = "*"
serde_json = "*"